# SerialReader

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.adoc  README.md  scripts-build.sh  scripts-run-tests.sh  scripts-run.sh
.github/workflows/: rust-docker.yml  rust.yml
src/: ExtraCommands.toml  SerialConfig.toml  factory.rs  lib.rs  main.rs  parse_config.rs  read_serial.rs  write_serial.rs
src/input_output/: mod.rs  read_serial.rs  write_serial.rs
src/serial_port/: mod.rs  serial_port_open.rs
