[package]
authors = ["signet-mob <signet.mob@gmail.com>"]
edition = "2018"
name = "serial-port-reader"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serialport = "3.3"
structopt = "0.3"
toml = "0.5"

[dependencies.serde]
features = ["derive"]
version = "1.0"
