[package]
authors = ["signet-mob <signet.mob@gmail.com>"]
edition = "2018"
name = "serial_port_reader_writer"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rustyline = "6.3"
serialport = "3.3"
structopt = "0.3"
toml = "0.5"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
pretty_assertions = "0.7"
rstest = "0.7"
