[package]
authors = ["Todd Nguyen <todd.nguyen47@gmail.com>"]
edition = "2018"
name = "serial-port-reader-writer"
version = "0.2.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rustyline = "6.3"
serialport = "3.3"
structopt = "0.3"
toml = "0.5"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
pretty_assertions = "0.7"
